--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 16 00:26:08 EST 2019
-sdk.dir=C\:\\Users\\BlueR\\AppData\\Local\\Android\\Sdk
+#Sat Feb 16 18:07:28 EST 2019
+sdk.dir=/Users/bradleyallnutt/Library/Android/sdk
