--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 16 21:40:19 EST 2019
-sdk.dir=/Users/bradleyallnutt/Library/Android/sdk
+#Sun Feb 17 14:46:03 EST 2019
+sdk.dir=C\:\\Users\\Joseph\\AppData\\Local\\Android\\sdk
