--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 18 13:45:54 EST 2019
-sdk.dir=/Users/jackwolfard/Library/Android/sdk
+#Mon Feb 18 18:20:06 EST 2019
+sdk.dir=C\:\\Users\\Joseph\\AppData\\Local\\Android\\sdk
