Cleaning files which should be machine dependent, also finished logging adding a player and displaying a toast

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "edu.gatech.cs2340.lab3newcomponents"
+        applicationId "edu.gatech.cs2340.spacetrader"
         minSdkVersion 25
         targetSdkVersion 28
         versionCode 1
@@ -43,7 +43,7 @@ dependencies {
 
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-    // use kapt for Kotlin
+
 
     // optional - RxJava support for Room
     implementation "android.arch.persistence.room:rxjava2:$room_version"
