PlanetActivity now properly shows the name, resource level and technology level of the planet the player is currently on.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name="edu.gatech.cs2340.spacetrader.view.PlanetActivity"
+            android:label="Current Planet"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
