Added new ViewModel Market. Currently empty. Segway from planet view to market view is functional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:label="Current Planet"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name="edu.gatech.cs2340.spacetrader.view.MarketActivity"
+            android:label="Marketplace"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
