Added a new view called Travel that shows the available planets you can reach. If you click on a planet in the recycler view it updates current planet and all other appropriate variables.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:label="Marketplace"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name="edu.gatech.cs2340.spacetrader.view.TravelActivity"
+            android:label="Travel"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
