--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,16 @@
             android:label="Travel"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name="edu.gatech.cs2340.spacetrader.view.PirateActivity"
+            android:label="Pirate encounter"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name="edu.gatech.cs2340.spacetrader.view.TraderActivity"
+            android:label="Trader encounter"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
